--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <p>Este es un parrafo</p>
   </div>
 
+  <div class="row1">
+    <h1>Titulo</h1>
 
+    <p>Este es un parrafo</p>
+  </div>
 
 
   </body>
